2009-12-02  Jb Evain  <jbevain@novell.com>

	* Assembly.cs: disable warning about Assembly overriding
	Equals but not GetHashCode. That's sadly how it's in .net.

2009-12-02  Jb Evain  <jbevain@novell.com>

	* MethodInfo.cs: add an internal virtual GetBaseMethod
	returning the immediate predecessor in the inheritance chain.
	* MonoMethod.cs: modify the get_base_definition icall to take
	a boolean indicating that we want the immediate	base method
	or the original method definition and rename it to
	get_base_method. Implement GetBaseMethod with it.

2009-11-21  Miguel de Icaza  <miguel@novell.com>

	* Assembly.cs: Implement missing method.

2009-11-03  Marek Habersack  <mhabersack@novell.com>

	* Assembly.cs: GetSatelliteAssembly must catch
	AppDomain.LoadSatellite FileNotFoundException and attempt to load
	satellites from subdirectories of current assembly's
	directory. Fixes bug #548768

2009-10-30  Sebastien Pouliot  <sebastien@ximian.com>

	* MonoMethod.cs: Remove CAS check in MonoCMethod.Invoke (just 
	like it was done for MonoMethod.Invoke sister method)

2009-10-26  Sebastien Pouliot  <sebastien@ximian.com>

	* Assembly.cs: Share code between GetSatelliteAssembly and 
	GetSatelliteAssemblyNoThrow. For Moonlight ensure both 
	GetManifestResourceStream and GetSatelliteAssembly don't load
	anything "below" the assembly path.

2009-10-20  Sebastien Pouliot  <sebastien@ximian.com>

	* MonoProperty.cs: Reduce code duplication and the number of direct
	calls to icalls (affecting the number of SecuritySafeCritical in
	Moonlight)

2009-10-19  Sebastien Pouliot  <sebastien@ximian.com>

	* MonoEvent.cs: Reduce code duplication and the number of direct
	calls to icalls (affecting the number of SecuritySafeCritical in
	Moonlight)

2009-10-18  Sebastien Pouliot  <sebastien@ximian.com>

	* MethodBase.cs: Reduce code duplication and the number of direct
	calls to icalls (affecting the number of SecuritySafeCritical in
	Moonlight)
